lab1/Test/L1-A-7-27.cmm
struct {
}fNztCOeLJzkXQxV6L0s [ 1511519530 ] 
;
struct OYUneQuWfbUQ8oJB4di $QTI_AxgbeZUQ ( int s ) 
  {
  float TM7Tapn8qBr , uniEgGbsKOkWZWaI5 = COAI ;
  if ( PvvwBaWwv )   sfKlYOazWC9xoKhX = izzUU76GE 
    || VdjqsnUy && WDqy > ZfjlCl - ! g7 [ RP89 <= EGmE1E35tcfcMtzry 
    * ! - WK9 ( rlbgLrbPkKFhaFV && z8WGDWsj + EMCpereb 
    * - M0O3Di5advw6PbGjP ( Z9PFjDBZVzr , zeoXRiYN , BJ7ihMfGkobZRe 
    == ( f >= GxLlll != tHhokA1EbwxsUjXJC0N ) * 594085167.222631758 
    < - - - 1932012312 . PoqnGsATggq6 ) ) / PleJQA93p 
    * - IY1J7SsZBN_LHk ( ) ] . k &;

}
struct g5Bjs64J1wKjnB7j91f {
};
int ;
int nlk , LC8LXhdf0pFAr6t 

;
int ;
int ;
int ;
int LYAelTIvCUwZUIn ( ) {
}
int ;
int c3G293SlhT_Pr ( ) {
  while ( N )   if ( a_rPiv2RN2Jdn )   return vT8Kw 
    ;
else {
  }

}
int kEMNAAd3_Swsl9Xe ( ) {
}
int ;
int ;
int ;
int ;
int kALm6RxIcZ #( ) {
  cKgX0yuTHKI ;
  g8190OIMYgoGosvHM ;
  if ( KMkGZ5XxM__N )   slFkrbdp0S ;
else   if ( IVXkpeV7NX )   FFN5h ;


}
int Atj_QqV ( ) {
}
int ;
int cLoXYsUZGa4Ay ( ) ^{
}
int t4yRxSa ( ) {
}
int ;
int ;
int ;
int ;
int ;
int kh ( ) {
}
int ;
int ritLfg_Xd ( int xq3_gje4ksvR7XQk98v , int iP8QZ22imQ 
  ) {
}
#